--- a/data_analysis.ipynb
+++ b/data_analysis.ipynb
@@ -9,12 +9,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
     "import requests\n",
     "import pandas as pd\n",
+    "import sqlite3\n",
     "from plyer import notification"
    ]
   },
@@ -27,14 +28,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "def buscar_json_do_endpoint(url_endpoint):\n",
-    "    \"\"\"\n",
-    "    Busca dados JSON do URL do endpoint especificado.\n",
-    "    \"\"\"\n",
     "    try:\n",
     "        resposta = requests.get(url_endpoint)\n",
     "        resposta.raise_for_status()\n",
@@ -43,18 +41,10 @@
     "        print(f\"Falha na requisição: {erro}\")\n",
     "        return None\n",
     "\n",
-    "\n",
     "def converter_para_dataframe(dados):\n",
-    "    \"\"\"\n",
-    "    Converte os dados fornecidos em um DataFrame do pandas.\n",
-    "    \"\"\"\n",
     "    return pd.DataFrame(dados)\n",
     "\n",
-    "\n",
     "def expandir_colunas_regiao(dataframe):\n",
-    "    \"\"\"\n",
-    "    Expande a coluna 'regiao' em colunas separadas (regiao_id, regiao_sigla, regiao_nome).\n",
-    "    \"\"\"\n",
     "    if 'regiao' in dataframe.columns:\n",
     "        regiao_expandida = dataframe['regiao'].apply(pd.Series)\n",
     "        regiao_expandida.columns = ['regiao_id', 'regiao_sigla', 'regiao_nome']\n",
@@ -66,20 +56,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Seção 2: Funções de coleta de dados por estado e município"
+    "# Seção 2: Funções de coleta de dados por estado e município\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "def buscar_dados_municipio(sigla_estado):\n",
-    "    \"\"\"\n",
-    "    Busca dados de municípios do endpoint baseado na sigla do estado.\n",
-    "    URL do endpoint: /ibge/municipios/v1/{sigla_estado}?providers=dados-abertos-br,gov,wikipedia\n",
-    "    \"\"\"\n",
     "    url_api = f\"https://brasilapi.com.br/api/ibge/municipios/v1/{sigla_estado}?providers=dados-abertos-br,gov,wikipedia\"\n",
     "    dados_json = buscar_json_do_endpoint(url_api)\n",
     "    \n",
@@ -89,22 +75,14 @@
     "        return dataframe\n",
     "    return pd.DataFrame()\n",
     "\n",
-    "\n",
     "def criar_df_final(url_dados_estado):\n",
-    "    \"\"\"\n",
-    "    Cria o DataFrame final combinando dados de estados e municípios.\n",
-    "    Busca os dados de estados e, para cada estado, coleta os dados dos municípios correspondentes.\n",
-    "    \"\"\"\n",
-    "    # Busca os dados dos estados\n",
     "    dados_estado = buscar_json_do_endpoint(url_dados_estado)\n",
     "    if dados_estado is None:\n",
     "        return None\n",
     "\n",
-    "    # Converte os dados de estado em DataFrame e expande colunas de região\n",
     "    dataframe_estado = converter_para_dataframe(dados_estado)\n",
     "    dataframe_estado = expandir_colunas_regiao(dataframe_estado)\n",
     "\n",
-    "    # Coleta dados dos municípios para cada estado\n",
     "    dataframes_municipios = []\n",
     "    for sigla_estado in dataframe_estado['sigla']:\n",
     "        dataframe_municipio = buscar_dados_municipio(sigla_estado)\n",
@@ -115,10 +93,7 @@
     "        print(\"Nenhum dado de município foi buscado.\")\n",
     "        return None\n",
     "\n",
-    "    # Concatena todos os DataFrames de municípios\n",
     "    dataframe_municipios = pd.concat(dataframes_municipios, ignore_index=True)\n",
-    "\n",
-    "    # Mescla os dados de estados e municípios em um DataFrame final\n",
     "    dataframe_final = pd.merge(dataframe_municipios, dataframe_estado, on='sigla', how='inner')\n",
     "    dataframe_final = dataframe_final.rename(columns={\n",
     "        \"nome_x\": \"municipio_nome\",\n",
@@ -127,7 +102,6 @@
     "        \"id\": \"estado_id\",\n",
     "    })\n",
     "\n",
-    "    # Ordena o DataFrame final por ID de região e nome do estado\n",
     "    dataframe_final = dataframe_final.sort_values(by=['regiao_id', 'estado_nome'], ascending=True)\n",
     "    return dataframe_final"
    ]
@@ -141,15 +115,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "def buscar_dados_bancos():\n",
-    "    \"\"\"\n",
-    "    Busca dados dos bancos a partir do endpoint.\n",
-    "    URL do endpoint: /banks/v1\n",
-    "    \"\"\"\n",
     "    url_api_bancos = \"https://brasilapi.com.br/api/banks/v1\"\n",
     "    dados_json_bancos = buscar_json_do_endpoint(url_api_bancos)\n",
     "    \n",
@@ -167,14 +137,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
     "def enviar_alerta(mensagem):\n",
-    "    \"\"\"\n",
-    "    Envia uma notificação de alerta com a mensagem fornecida.\n",
-    "    \"\"\"\n",
     "    notification.notify(\n",
     "        title='Alerta',\n",
     "        message=mensagem,\n",
@@ -186,54 +153,80 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Seção 5: Função principal (main)"
+    "# Seção 5: Função para salvar DataFrames no SQLite\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def main():\n",
-    "    \"\"\"\n",
-    "    Função principal que executa a coleta e exibição dos dados.\n",
-    "    Também envia notificações sobre o status do processamento.\n",
-    "    \"\"\"\n",
-    "    # URL para buscar dados dos estados\n",
-    "    url_dados_estado = \"https://brasilapi.com.br/api/ibge/uf/v1\"\n",
-    "    \n",
-    "    # Coleta e exibe dados dos estados e municípios\n",
-    "    df = criar_df_final(url_dados_estado)\n",
-    "    if df is not None and not df.empty:\n",
-    "        display(df)  # Exibe o DataFrame no Jupyter Notebook\n",
-    "        enviar_alerta(\"Dados dos estados e municípios processados com sucesso.\")\n",
-    "    else:\n",
-    "        print(\"Falha ao recuperar ou processar dados dos estados e municípios.\")\n",
-    "        enviar_alerta(\"Falha ao processar dados dos estados e municípios.\")\n",
-    "\n",
-    "    # Coleta e exibe dados dos bancos\n",
-    "    df_bancos = buscar_dados_bancos()\n",
-    "    if df_bancos is not None and not df_bancos.empty:\n",
-    "        display(df_bancos)  # Exibe o DataFrame dos bancos no Jupyter Notebook\n",
-    "        enviar_alerta(\"Dados dos bancos foram coletados com sucesso.\")\n",
-    "    else:\n",
-    "        print(\"Falha ao recuperar dados dos bancos.\")\n",
-    "        enviar_alerta(\"Falha ao coletar dados dos bancos.\")"
+    "def salvar_df_no_sqlite(df, tabela_nome, conexao):\n",
+    "    try:\n",
+    "        df.to_sql(tabela_nome, conexao, if_exists='replace', index=False)\n",
+    "        enviar_alerta(f\"Dados salvos com sucesso na tabela {tabela_nome}.\")\n",
+    "    except Exception as e:\n",
+    "        enviar_alerta(f\"Erro ao salvar dados na tabela {tabela_nome}: {e}\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Execução da função principal"
+    "# Seção 6: Função principal (main)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def main():\n",
+    "    url_dados_estado = \"https://brasilapi.com.br/api/ibge/uf/v1\"\n",
+    "    \n",
+    "    conexao = sqlite3.connect('database.db')\n",
+    "    \n",
+    "    df = criar_df_final(url_dados_estado)\n",
+    "    if df is not None and not df.empty:\n",
+    "        salvar_df_no_sqlite(df, 'estados_municipios', conexao)\n",
+    "        enviar_alerta(\"Dados dos estados e municípios processados com sucesso.\")\n",
+    "    else:\n",
+    "        print(\"Falha ao recuperar ou processar dados dos estados e municípios.\")\n",
+    "        enviar_alerta(\"Falha ao processar dados dos estados e municípios.\")\n",
+    "\n",
+    "    df_bancos = buscar_dados_bancos()\n",
+    "    if df_bancos is not None and not df_bancos.empty:\n",
+    "        salvar_df_no_sqlite(df_bancos, 'bancos', conexao)\n",
+    "        enviar_alerta(\"Dados dos bancos foram coletados com sucesso.\")\n",
+    "    else:\n",
+    "        print(\"Falha ao recuperar dados dos bancos.\")\n",
+    "        enviar_alerta(\"Falha ao coletar dados dos bancos.\")\n",
+    "    \n",
+    "    conexao.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Run"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Dados da tabela: estados_municipios\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -267,7 +260,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>52</th>\n",
+       "      <th>0</th>\n",
        "      <td>ACRELANDIA</td>\n",
        "      <td>1200013</td>\n",
        "      <td>AC</td>\n",
@@ -278,7 +271,7 @@
        "      <td>Norte</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>53</th>\n",
+       "      <th>1</th>\n",
        "      <td>ASSIS BRASIL</td>\n",
        "      <td>1200054</td>\n",
        "      <td>AC</td>\n",
@@ -289,7 +282,7 @@
        "      <td>Norte</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>54</th>\n",
+       "      <th>2</th>\n",
        "      <td>BRASILEIA</td>\n",
        "      <td>1200104</td>\n",
        "      <td>AC</td>\n",
@@ -300,7 +293,7 @@
        "      <td>Norte</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>55</th>\n",
+       "      <th>3</th>\n",
        "      <td>BUJARI</td>\n",
        "      <td>1200138</td>\n",
        "      <td>AC</td>\n",
@@ -311,7 +304,7 @@
        "      <td>Norte</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>56</th>\n",
+       "      <th>4</th>\n",
        "      <td>CAPIXABA</td>\n",
        "      <td>1200179</td>\n",
        "      <td>AC</td>\n",
@@ -333,7 +326,7 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5177</th>\n",
+       "      <th>5565</th>\n",
        "      <td>TACURU</td>\n",
        "      <td>5007950</td>\n",
        "      <td>MS</td>\n",
@@ -344,7 +337,7 @@
        "      <td>Centro-Oeste</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5178</th>\n",
+       "      <th>5566</th>\n",
        "      <td>TAQUARUSSU</td>\n",
        "      <td>5007976</td>\n",
        "      <td>MS</td>\n",
@@ -355,7 +348,7 @@
        "      <td>Centro-Oeste</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5179</th>\n",
+       "      <th>5567</th>\n",
        "      <td>TERENOS</td>\n",
        "      <td>5008008</td>\n",
        "      <td>MS</td>\n",
@@ -366,7 +359,7 @@
        "      <td>Centro-Oeste</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5180</th>\n",
+       "      <th>5568</th>\n",
        "      <td>TRES LAGOAS</td>\n",
        "      <td>5008305</td>\n",
        "      <td>MS</td>\n",
@@ -377,7 +370,7 @@
        "      <td>Centro-Oeste</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5181</th>\n",
+       "      <th>5569</th>\n",
        "      <td>VICENTINA</td>\n",
        "      <td>5008404</td>\n",
        "      <td>MS</td>\n",
@@ -394,36 +387,44 @@
       ],
       "text/plain": [
        "     municipio_nome codigo_ibge estado_sigla  estado_id         estado_nome  \\\n",
-       "52       ACRELANDIA     1200013           AC         12                Acre   \n",
-       "53     ASSIS BRASIL     1200054           AC         12                Acre   \n",
-       "54        BRASILEIA     1200104           AC         12                Acre   \n",
-       "55           BUJARI     1200138           AC         12                Acre   \n",
-       "56         CAPIXABA     1200179           AC         12                Acre   \n",
+       "0        ACRELANDIA     1200013           AC         12                Acre   \n",
+       "1      ASSIS BRASIL     1200054           AC         12                Acre   \n",
+       "2         BRASILEIA     1200104           AC         12                Acre   \n",
+       "3            BUJARI     1200138           AC         12                Acre   \n",
+       "4          CAPIXABA     1200179           AC         12                Acre   \n",
        "...             ...         ...          ...        ...                 ...   \n",
-       "5177         TACURU     5007950           MS         50  Mato Grosso do Sul   \n",
-       "5178     TAQUARUSSU     5007976           MS         50  Mato Grosso do Sul   \n",
-       "5179        TERENOS     5008008           MS         50  Mato Grosso do Sul   \n",
-       "5180    TRES LAGOAS     5008305           MS         50  Mato Grosso do Sul   \n",
-       "5181      VICENTINA     5008404           MS         50  Mato Grosso do Sul   \n",
+       "5565         TACURU     5007950           MS         50  Mato Grosso do Sul   \n",
+       "5566     TAQUARUSSU     5007976           MS         50  Mato Grosso do Sul   \n",
+       "5567        TERENOS     5008008           MS         50  Mato Grosso do Sul   \n",
+       "5568    TRES LAGOAS     5008305           MS         50  Mato Grosso do Sul   \n",
+       "5569      VICENTINA     5008404           MS         50  Mato Grosso do Sul   \n",
        "\n",
        "      regiao_id regiao_sigla   regiao_nome  \n",
-       "52            1            N         Norte  \n",
-       "53            1            N         Norte  \n",
-       "54            1            N         Norte  \n",
-       "55            1            N         Norte  \n",
-       "56            1            N         Norte  \n",
+       "0             1            N         Norte  \n",
+       "1             1            N         Norte  \n",
+       "2             1            N         Norte  \n",
+       "3             1            N         Norte  \n",
+       "4             1            N         Norte  \n",
        "...         ...          ...           ...  \n",
-       "5177          5           CO  Centro-Oeste  \n",
-       "5178          5           CO  Centro-Oeste  \n",
-       "5179          5           CO  Centro-Oeste  \n",
-       "5180          5           CO  Centro-Oeste  \n",
-       "5181          5           CO  Centro-Oeste  \n",
+       "5565          5           CO  Centro-Oeste  \n",
+       "5566          5           CO  Centro-Oeste  \n",
+       "5567          5           CO  Centro-Oeste  \n",
+       "5568          5           CO  Centro-Oeste  \n",
+       "5569          5           CO  Centro-Oeste  \n",
        "\n",
        "[5570 rows x 8 columns]"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Dados da tabela: bancos\n"
+     ]
     },
     {
      "data": {
@@ -519,16 +520,16 @@
        "    <tr>\n",
        "      <th>357</th>\n",
        "      <td></td>\n",
+       "      <td>None</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>358</th>\n",
        "      <td></td>\n",
+       "      <td>None</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -546,8 +547,8 @@
        "354  92875780            WARREN CVMC LTDA  371.0   \n",
        "355  92894922              BANCO ORIGINAL  212.0   \n",
        "356  94968518                EFX CC LTDA.  289.0   \n",
-       "357                                   NaN    NaN   \n",
-       "358                                   NaN    NaN   \n",
+       "357                                  None    NaN   \n",
+       "358                                  None    NaN   \n",
        "\n",
        "                                              fullName  \n",
        "0                                 Banco do Brasil S.A.  \n",
@@ -559,8 +560,8 @@
        "354  WARREN CORRETORA DE VALORES MOBILIÁRIOS E CÂMB...  \n",
        "355                                Banco Original S.A.  \n",
        "356                      EFX CORRETORA DE CÂMBIO LTDA.  \n",
-       "357                                                NaN  \n",
-       "358                                                NaN  \n",
+       "357                                               None  \n",
+       "358                                               None  \n",
        "\n",
        "[359 rows x 4 columns]"
       ]
@@ -570,7 +571,27 @@
     }
    ],
    "source": [
-    "main()"
+    "main()\n",
+    "\n",
+    "def mostrar_tabelas(conexao):\n",
+    "    query_tabelas = \"SELECT name FROM sqlite_master WHERE type='table';\"\n",
+    "    try:\n",
+    "        tabelas = pd.read_sql_query(query_tabelas, conexao)\n",
+    "        if not tabelas.empty:\n",
+    "            for tabela in tabelas['name']:\n",
+    "                print(f\"\\nDados da tabela: {tabela}\")\n",
+    "                query_dados = f\"SELECT * FROM {tabela};\"\n",
+    "                dados = pd.read_sql_query(query_dados, conexao)\n",
+    "                display(dados)\n",
+    "        else:\n",
+    "            enviar_alerta(\"Nenhuma tabela encontrada no banco de dados.\")\n",
+    "    except Exception as e:\n",
+    "        print(f\"Erro ao consultar tabelas: {e}\")\n",
+    "\n",
+    "\n",
+    "conexao = sqlite3.connect('database.db')\n",
+    "mostrar_tabelas(conexao)\n",
+    "conexao.close()"
    ]
   }
  ],
