Update jupyter notebook

--- a/data_analysis.ipynb
+++ b/data_analysis.ipynb
@@ -23,7 +23,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Seção 1: Funções de busca e manipulação de dados"
+    "# Funções de busca e manipulação de dados"
    ]
   },
   {
@@ -33,6 +33,10 @@
    "outputs": [],
    "source": [
     "def buscar_json_do_endpoint(url_endpoint):\n",
+    "    \"\"\"\n",
+    "    Envia uma requisição GET ao endpoint especificado e retorna o JSON da resposta.\n",
+    "    Se ocorrer algum erro na requisição, imprime o erro e retorna None.\n",
+    "    \"\"\"\n",
     "    try:\n",
     "        resposta = requests.get(url_endpoint)\n",
     "        resposta.raise_for_status()\n",
@@ -42,9 +46,17 @@
     "        return None\n",
     "\n",
     "def converter_para_dataframe(dados):\n",
+    "    \"\"\"\n",
+    "    Converte os dados fornecidos em um DataFrame do Pandas.\n",
+    "    \"\"\"\n",
     "    return pd.DataFrame(dados)\n",
     "\n",
     "def expandir_colunas_regiao(dataframe):\n",
+    "    \"\"\"\n",
+    "    Verifica se o DataFrame contém uma coluna 'regiao'. Se sim, \n",
+    "    expande as informações dessa coluna em novas colunas: \n",
+    "    'regiao_id', 'regiao_sigla', e 'regiao_nome', e remove a coluna original.\n",
+    "    \"\"\"\n",
     "    if 'regiao' in dataframe.columns:\n",
     "        regiao_expandida = dataframe['regiao'].apply(pd.Series)\n",
     "        regiao_expandida.columns = ['regiao_id', 'regiao_sigla', 'regiao_nome']\n",
@@ -56,7 +68,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Seção 2: Funções de coleta de dados por estado e município\n"
+    "# Funções de coleta de dados por estado e município\n"
    ]
   },
   {
@@ -66,6 +78,10 @@
    "outputs": [],
    "source": [
     "def buscar_dados_municipio(sigla_estado):\n",
+    "    \"\"\"\n",
+    "    Busca dados dos municípios de um estado específico, utilizando a sigla do estado.\n",
+    "    Retorna um DataFrame com os dados dos municípios ou um DataFrame vazio em caso de falha.\n",
+    "    \"\"\"\n",
     "    url_api = f\"https://brasilapi.com.br/api/ibge/municipios/v1/{sigla_estado}?providers=dados-abertos-br,gov,wikipedia\"\n",
     "    dados_json = buscar_json_do_endpoint(url_api)\n",
     "    \n",
@@ -76,6 +92,10 @@
     "    return pd.DataFrame()\n",
     "\n",
     "def criar_df_final(url_dados_estado):\n",
+    "    \"\"\"\n",
+    "    Busca e combina dados dos estados e seus respectivos municípios, retornando um DataFrame final.\n",
+    "    Se não for possível obter os dados, retorna None.\n",
+    "    \"\"\"\n",
     "    dados_estado = buscar_json_do_endpoint(url_dados_estado)\n",
     "    if dados_estado is None:\n",
     "        return None\n",
@@ -110,7 +130,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Seção 3: Função de coleta de dados bancários"
+    "# Função de coleta de dados bancários"
    ]
   },
   {
@@ -120,7 +140,10 @@
    "outputs": [],
    "source": [
     "def buscar_dados_bancos():\n",
-    "    url_api_bancos = \"https://brasilapi.com.br/api/banks/v1\"\n",
+    "    \"\"\"\n",
+    "    Busca dados de bancos através de um endpoint público e retorna um DataFrame com os dados.\n",
+    "    Retorna um DataFrame vazio se não for possível obter os dados.\n",
+    "    \"\"\"    url_api_bancos = \"https://brasilapi.com.br/api/banks/v1\"\n",
     "    dados_json_bancos = buscar_json_do_endpoint(url_api_bancos)\n",
     "    \n",
     "    if dados_json_bancos:\n",
@@ -132,7 +155,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Seção 4: Função de notificação"
+    "# Função de notificação"
    ]
   },
   {
@@ -142,6 +165,9 @@
    "outputs": [],
    "source": [
     "def enviar_alerta(mensagem):\n",
+    "    \"\"\"\n",
+    "    Envia uma notificação de alerta ao sistema com a mensagem fornecida.\n",
+    "    \"\"\"\n",
     "    notification.notify(\n",
     "        title='Alerta',\n",
     "        message=mensagem,\n",
@@ -153,7 +179,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Seção 5: Função para salvar DataFrames no SQLite\n"
+    "# Função para salvar DataFrames no SQLite\n"
    ]
   },
   {
@@ -163,6 +189,10 @@
    "outputs": [],
    "source": [
     "def salvar_df_no_sqlite(df, tabela_nome, conexao):\n",
+    "    \"\"\"\n",
+    "    Salva um DataFrame em uma tabela de banco de dados SQLite.\n",
+    "    Se ocorrer um erro, envia uma notificação com a mensagem de erro.\n",
+    "    \"\"\"\n",
     "    try:\n",
     "        df.to_sql(tabela_nome, conexao, if_exists='replace', index=False)\n",
     "        enviar_alerta(f\"Dados salvos com sucesso na tabela {tabela_nome}.\")\n",
@@ -174,7 +204,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Seção 6: Função principal (main)"
+    "# Função main"
    ]
   },
   {
@@ -184,6 +214,10 @@
    "outputs": [],
    "source": [
     "def main():\n",
+    "    \"\"\"\n",
+    "    Executa o fluxo principal: coleta dados dos estados e municípios, \n",
+    "    dados dos bancos, e salva tudo no banco de dados SQLite.\n",
+    "    \"\"\"\n",
     "    url_dados_estado = \"https://brasilapi.com.br/api/ibge/uf/v1\"\n",
     "    \n",
     "    conexao = sqlite3.connect('database.db')\n",
